--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
         </div>
     </main>
     <footer></footer>
-    <script src="/js/main.js"></script>
-    <script src="/js/convert.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/convert.js"></script>
 </body>
 
 </html>
