add select nb of array option

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <textarea name="source" id="source"></textarea>
             </div>
             <div id="containBtn">
+                <input type="number" name="nbOfArray" id="nbOfArray" value="25">
                 <a id="btnStart" href="#" onclick="convertArray()">Convert</a>
             </div>
             <div id="codebox">
