add copy on clipboard function

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div id="codebox">
                 <div id="codeboxHeader">
                     <p>Array</p>
-                    <svg id="copy" aria-hidden="true" focusable="false" data-prefix="far" data-icon="copy"
+                    <svg id="copy" onclick="copyClipboard()" aria-hidden="true" focusable="false" data-prefix="far" data-icon="copy"
                         class="svg-inline--fa fa-copy fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg"
                         viewBox="0 0 448 512">
                         <path fill="currentColor"
